--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
 	margin-left:auto;
 	margin-right:auto;
 	top:50px;
-	font-family: "Helvetica", Helvetica, sans-serif;
+	font-family: "Camcorder Monospaced", "Helvetica", sans-serif;
 	height:90%;
 	/*color: #595959;*/
-	color: #eeeeee;
+	/*color: #eeeeee;*/
+	color: rgba(238,238,238, 0.8);
 	position:relative;
 	top:50px;
 }
