--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-   <Homepage generator>
-   Copyright (C) <2018>  <Niles Rogoff> me@niles.xyz
+   Homepage generator
+   Copyright (C) 2019  Niles Rogoff me@niles.xyz
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
